Convert tabs to spaces

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,5 +9,5 @@
     "source.fixAll.eslint": true
   },
   "editor.detectIndentation": false,
-	"editor.insertSpaces": false
+  "editor.insertSpaces": true
 }
