--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "gen": "graphql-codegen --config codegen.yml"
   },
   "dependencies": {
+    "@types/react-transition-group": "^4.4.2",
     "axios": "^0.21.1",
     "formik": "^2.2.6",
     "next": "^11.1.0",
@@ -18,6 +19,7 @@
     "react-anchor-link-smooth-scroll": "^1.0.12",
     "react-dom": "^17.0.2",
     "react-google-recaptcha": "^2.1.0",
+    "react-transition-group": "^4.4.2",
     "styled-components": "^5.2.3",
     "yup": "^0.32.9"
   },
