--- a/package.json
+++ b/package.json
@@ -34,10 +34,17 @@
     "@types/react-google-recaptcha": "^2.1.0",
     "@types/styled-components": "^5.1.9",
     "@types/yup": "^0.29.11",
+    "@typescript-eslint/eslint-plugin": "^4.31.1",
+    "@typescript-eslint/parser": "^4.31.1",
     "babel-plugin-module-resolver": "^4.1.0",
     "babel-plugin-styled-components": "^1.12.0",
-    "eslint": "^7.30.0",
+    "eslint": "^7.32.0",
     "eslint-config-next": "^11.1.0",
+    "eslint-config-standard": "^16.0.3",
+    "eslint-plugin-import": "^2.24.2",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^5.1.0",
+    "eslint-plugin-react": "^7.25.1",
     "husky": "^4.3.6",
     "lint-staged": "^10.5.3",
     "prettier": "^2.3.2",
