--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "next-seo": "^4.24.0",
     "react": "^17.0.2",
     "react-anchor-link-smooth-scroll": "^1.0.12",
+    "react-custom-scrollbars-2": "^4.4.0",
     "react-dom": "^17.0.2",
     "react-google-recaptcha": "^2.1.0",
     "react-transition-group": "^4.4.2",
