--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,5 +22,5 @@
     "suppressImplicitAnyIndexErrors": true
   },
   "exclude": ["node_modules", "./types"],
-  "include": ["**/*.ts", "**/*.tsx", "src/generated/github-schema-loader.js", "custom.d.ts"]
+  "include": ["**/*.ts", "**/*.tsx", "src/generated/github-schema-loader.js"]
 }
